# mpd-inspector

./: .gitignore  LICENSE  README.md  pyproject.toml
manifests/: aws-media-tailor-vod-personalized-response-manifest.mpd  broadpeakio-ssai-multiperiod.mpd  broadpeakio-ssai-multiperiod2.mpd  broadpeakio-ssai-vod-multiperiod.mpd  live-mediapackage-scte35-singleperiod.mpd  vod-multi-period-no-start.mpd  vspp-live-multiperiod-events-scte35bin.mpd  vspp-vod-multiperiod-events.mpd
mpd_inspector/: __init__.py  inspector.py  value_statements.py
mpd_inspector/parser/: __init__.py  exceptions.py  mpd_tags.py  parser.py  scte35_enums.py  scte35_tags.py  tags.py
src/mpd_inspector/: inspector.py  value_statements.py
src/mpd_parser/: attribute_parsers.py  enums.py  parser.py  tags.py
tests/: conftest.py  test_assignment.py  test_attribute_parsers.py  test_events.py  test_inspector.py  test_manifests.py  test_tag.py  test_timeline.py  test_value_statements.py
