[tool.poetry]
name = "mpd-inspector"
version = "0.1.0"
description = "A module to parse, analyze and validate MPEG-DASH MPD"
authors = ["Fabre Lambeau <fabre.lambeau@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
lxml = "^5.2.2"
isodate = "^0.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pylint = "^3.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
